# wikidata_cpp

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  travis_build.sh  wikidata_cpp_config.h.in
apps/: CMakeLists.txt  main.cpp  main_pipeline.cpp  pipeline.cpp
cmake/: FindZeroMQ.cmake  compiler_options.cmake  dependencies.cmake
src/: CMakeLists.txt  data.cpp  data.h  dummy.cpp  dummy.h  io.cpp  io.h  pipeline.cpp  pipeline.h  processing.cpp  processing.h  utils.cpp  utils.h
tests/: test_dummy.cpp  test_main.cpp
travis/: install_zmqpp.sh  travis_build.sh
